--- a/gallery.html
+++ b/gallery.html
@@ -15,15 +15,23 @@
 	</head>
 	<body>
 		<header class="header">
-			<nav class="header__content gallery___nav">
-				<a class="header__content__logo" href="index.html" tabindex="1">
-					<span class="header__content__logo__txt">Fish</span>
+			<nav class="header__content gallery__nav">
+				<a
+					class="header__content__logo gallery__nav__logo"
+					href="index.html"
+					tabindex="1"
+				>
+					<span class="header__content__logo__txt gallery__nav__logo__txt"
+						>Fish</span
+					>
 					<img
 						src="images/logo/logo.png"
 						alt="logo fisheye"
-						class="header__content__logo__img"
+						class="header__content__logo__img gallery__nav__logo__img"
 					/>
-					<span class="header__content__logo__txt">ye</span></a
+					<span class="header__content__logo__txt gallery__nav__logo__txt"
+						>ye</span
+					></a
 				>
 			</nav>
 		</header>
@@ -31,7 +39,7 @@
 		<main class="gallery__main">
 			<div class="gallery__main__presentation"></div>
 			<div class="custom-select">
-				<label for="sort">Trier par:</label>
+				<label for="sort" class="custom-select__label">Trier par:</label>
 				<select id="sort">
 					<option value="likes">Popularité</option>
 					<option value="date">Date</option>
